--- a/Similarity Analysis for MNIST-Fashion.ipynb
+++ b/Similarity Analysis for MNIST-Fashion.ipynb
@@ -17,8 +17,7 @@
     "from keras.datasets import fashion_mnist\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import itertools\n",
-    "from skimage.measure import compare_ssim as ssim"
+    "import itertools"
    ]
   },
   {
